test/admin/language/english/group/type.php
<?php
// Heading
$_['heading_title']           = 'Group Type';

// Text
$_['text_success']            = 'Success: You have modified Types!';
$_['text_type'] 			  = 'Group Type';
$_['text_status']			  = 'Status';
$_['text_action']			  = 'Action';

// Entry
$_['entry_name']              = 'Type Name:';

// error
$_['error_name']              = 'Group Type Name must be between 3 and 128 characters!';
$_['error_permission']        = 'Warning: You do not have permission to modify Types!';

// Column
$_['column_name']             = 'Group Type Name';
$_['column_action']           = 'Action';

// Error
$_['error_default']           = 'Warning: This Group type cannot be deleted as it is currently assigned as the default store Group Type!';
$_['error_name']              = 'type Name must be between 3 and 128 characters!';
?>